// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  border: 0.05rem solid;
  border-radius: 0.2rem;
  border-color: #191723;
  background-color: #0e0c1a;
  color: #ffffff;
  line-height: 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 1.8rem;
  padding: 0.35rem 0.4rem;
  font-size: .8rem;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
}

.c0:focus {
  border-color: #0e0c1a;
  outline: 0;
  box-shadow: 0 0 0 0.1rem rgba(25,23,35,0.2);
}

.c0:hover {
  background-color: #ffffff;
  color: #0e0c1a;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

<Button
  active={false}
  block={false}
  circle={false}
  ghost={false}
  light={false}
  loading={false}
  size="m"
>
  <button
    className="c0"
    size="m"
  >
    Text Button
  </button>
</Button>
`;

exports[`Button should render with props light, circle and active 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  border: 0.05rem solid;
  border-radius: 0.2rem;
  border-color: #191723;
  background-color: #0e0c1a;
  color: #ffffff;
  line-height: 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 1.8rem;
  padding: 0.35rem 0.4rem;
  font-size: .8rem;
  border-color: #e9e9e9;
  background-color: #ffffff;
  color: #373737;
  border-color: #ab9272;
  background-color: #ab9272;
  color: #ffffff;
  border-radius: 999px;
  padding: 0.35rem calc(0.4rem * 2);
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
}

.c0:focus {
  border-color: #0e0c1a;
  outline: 0;
  box-shadow: 0 0 0 0.1rem rgba(25,23,35,0.2);
}

.c0:hover {
  background-color: #ffffff;
  color: #0e0c1a;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c0:focus {
  border-color: #0e0c1a;
  box-shadow: 0 0 0 0.1rem rgba(25,23,35,0.2);
}

.c0:hover {
  background-color: #e9e9e9;
}

.c0:hover {
  background-color: #c7ad8d;
  color: #ffffff;
}

.c0:focus {
  border-color: #ab9272;
}

<Button
  active={true}
  block={false}
  circle={true}
  ghost={false}
  light={true}
  loading={false}
  size="m"
>
  <button
    className="c0"
    size="m"
  >
    Text Button
  </button>
</Button>
`;
